tests/fixtures/invalid/pow_bytes_bytes.py
# Cannot call pow() with Bytes, Bytes
x = pow(b"hello", b"hello")
